--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "graphql-demo",
   "version": "0.0.1",
   "description": "A GraphQL demo",
+  "main": "main.ts",
   "author": {
     "name": "Luis Portillo",
     "email": "devcorvus.contact@gmail.com",
@@ -9,6 +10,18 @@
   },
   "license": "MIT",
   "scripts": {
+    "dev": "nodemon ./src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
