--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "graphql-demo",
+  "name": "express-graphql-demo",
   "version": "0.0.1",
-  "description": "A GraphQL demo",
+  "description": "A GraphQL demo with Express",
   "main": "main.ts",
   "author": {
     "name": "Luis Portillo",
