--- a/package.json
+++ b/package.json
@@ -10,18 +10,34 @@
   },
   "license": "MIT",
   "scripts": {
+    "codegen": "graphql-codegen --config ./src/config/codegen.ts",
     "dev": "nodemon ./src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "3.2.2",
+    "@graphql-codegen/introspection": "3.0.1",
+    "@graphql-codegen/typescript": "3.0.2",
+    "@graphql-codegen/typescript-resolvers": "3.1.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/graphql-file-loader": "^7.5.16",
+    "@graphql-tools/load": "^7.8.13",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0"
   }
 }
