--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "codegen": "graphql-codegen --config ./src/config/codegen.ts",
     "dev": "nodemon ./src/main.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.2",
@@ -38,6 +39,7 @@
     "@graphql-tools/load": "^7.8.13",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mongoose": "^7.0.3"
   }
 }
