--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "scripts": {
     "codegen": "graphql-codegen --config ./src/config/codegen.ts",
     "dev": "nodemon ./src/main.ts",
+    "build": "npm run codegen && rimraf ./dist && tsc && cpy './src/schemas/*' './dist/schemas'",
+    "start": "node ./dist/main.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -25,9 +27,11 @@
     "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
     "@types/supertest": "^2.0.12",
+    "cpy-cli": "^4.2.0",
     "jest": "^29.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
+    "rimraf": "^4.4.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
